experimental/ir/testdata/extend/in_range.proto.stderr.txt
error: extension with unreserved number `20`
  --> testdata/extend/in_range.proto:12:24
   |
12 |     optional int32 z = 20;
   |                        ^^
   = help: the parent message `test.M` must have reserved this number with an
           extension range, e.g. `extensions 20;`

encountered 1 error
